--- a/_config.yml
+++ b/_config.yml
@@ -19,7 +19,7 @@
 # in the templates via {{ site.myvariable }}.
 
 title: SF data Crime Story
-email: your-email@example.com
+email: s242693@dtu.dk, s242744@dtu.dk, s242689@dtu.dk
 description: >- # this means to ignore newlines until "baseurl:"
   Write an awesome description for your new site here. You can edit this
   line in _config.yml. It will appear in your document head meta (for
@@ -34,7 +34,7 @@ github_username:  jekyll
 minima:
   header_pages:
     - index.markdown
-    
+
 theme: minima
 plugins:
   - jekyll-feed
