--- a/_config.yml
+++ b/_config.yml
@@ -19,15 +19,21 @@
 # in the templates via {{ site.myvariable }}.
 
 title: SF data Crime Story
-email: s242693@dtu.dk, s242744@dtu.dk, s242689@dtu.dk
+email: 
+- s242693@dtu.dk
+- s242744@dtu.dk
+- s242689@dtu.dk
+
 description: >- # this means to ignore newlines until "baseurl:"
-  Write an awesome description for your new site here. You can edit this
-  line in _config.yml. It will appear in your document head meta (for
-  Google search results) and in your feed.xml site description.
+  An interactive data story analyzing vehicle thefts in San Francisco between 2003 and 2024.
+  Through visuals and insights, we explore how, when, and where car thefts occurred—and what patterns emerged over time.
 baseurl: "" # the subpath of your site, e.g. /blog
 url: "" # the base hostname & protocol for your site, e.g. http://example.com
-twitter_username: jekyllrb
-github_username:  jekyll
+github_username:  arorahallmundar
+group_members: 
+- Áróra Hallmundardóttir
+- Nanna Kristín Bjarnadóttir
+- Tinna Sól Björgvinsdóttir
 
 # Build settings
 
