--- a/_config.yml
+++ b/_config.yml
@@ -19,21 +19,32 @@
 # in the templates via {{ site.myvariable }}.
 
 title: SF data Crime Story
-email: 
-- s242693@dtu.dk
-- s242744@dtu.dk
-- s242689@dtu.dk
+#email: 
+#- s242693@dtu.dk
+#- s242744@dtu.dk
+#- s242689@dtu.dk
 
 description: >- # this means to ignore newlines until "baseurl:"
   An interactive data story analyzing vehicle thefts in San Francisco between 2003 and 2024.
   Through visuals and insights, we explore how, when, and where car thefts occurred—and what patterns emerged over time.
+
+authors:
+  - name: Arora Hallmundar
+    email: s242693@dtu.dk
+    github: arorahallmundar
+  - name: Tinna Sol
+    email: s242744@dtu.dk
+  - name: Nanna Kristin
+    email: s242689@dtu.dk
+
+
 baseurl: "" # the subpath of your site, e.g. /blog
 url: "" # the base hostname & protocol for your site, e.g. http://example.com
-github_username:  arorahallmundar
-group_members: 
-- Áróra Hallmundardóttir
-- Nanna Kristín Bjarnadóttir
-- Tinna Sól Björgvinsdóttir
+#github_username:  arorahallmundar
+#group_members: 
+#- Áróra Hallmundardóttir
+#- Nanna Kristín Bjarnadóttir
+#- Tinna Sól Björgvinsdóttir
 
 # Build settings
 
