--- a/_config.yml
+++ b/_config.yml
@@ -52,8 +52,14 @@ url: "" # the base hostname & protocol for your site, e.g. http://example.com
 #    - index.markdown
 
 theme: minima
+
+minima:
+  header_pages: []
+
 plugins:
   - jekyll-feed
+
+
 
 
 # Exclude from processing.
